--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Node-Review",
+  "name": "node-review",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "cd HTML-Generator && node index.js"
   },
   "keywords": [],
   "author": "",
